--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.1.4",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@tailwindcss/postcss": "^4.1.4"
     }
 }
